@startuml class_diagram
skinparam backgroundColor #ffffff
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho

' =====================
' Classes principais
' =====================
class Board {
  - id : std::string
  - name : std::string
  - columns : std::vector<Column>
  - activityLog : ActivityLog*
  --
  + addColumn(column: Column) : void
  + removeColumn(name: std::string) : bool
  + findColumn(name: std::string) : Column*
  + addCard(columnName: std::string, card: Card) : bool
  + moveCard(cardId: std::string, fromCol: std::string, toCol: std::string) : bool
  + findCardsByTag(tag: std::string) : std::vector<Card*>
  + filterByPriority(minPriority: int) : std::vector<Card*>
  + filterByAssignee(user: User*) : std::vector<Card*>
  + getAllTags() : std::vector<std::string>
  + toJson() : nlohmann::json
  + {static} fromJson(j: nlohmann::json) : Board
}

class Column {
  - name : std::string
  - wipLimit : int
  - cards : std::vector<Card>
  --
  + addCard(card: Card) : bool
  + removeCard(cardId: std::string) : bool
  + findCard(cardId: std::string) : Card*
  + isFull() : bool
  + getCardCount() : size_t
  + toJson() : nlohmann::json
  + {static} fromJson(j: nlohmann::json) : Column
}

class Card {
  - id : std::string
  - title : std::string
  - description : std::string
  - assignee : User*
  - priority : int
  - tags : std::vector<std::string>
  - createdAt : std::chrono::system_clock::time_point
  - updatedAt : std::chrono::system_clock::time_point
  --
  + setTitle(t: std::string) : void
  + setDescription(d: std::string) : void
  + setAssignee(u: User*) : void
  + setPriority(p: int) : void
  + addTag(tag: std::string) : void
  + removeTag(tag: std::string) : void
  + hasTag(tag: std::string) : bool
  + getTags() : std::vector<std::string>
  + toJson() : nlohmann::json
  + {static} fromJson(j: nlohmann::json) : Card
  + operator==(other: Card) : bool
}

class User {
  - id : std::string
  - name : std::string
  - email : std::string
  --
  + getId() : std::string
  + getName() : std::string
  + getEmail() : std::string
  + toJson() : nlohmann::json
  + {static} fromJson(j: nlohmann::json) : User
}

class ActivityLog {
  - entries : std::vector<ActivityEntry>
  --
  + record(event: std::string) : void
  + all() : std::vector<ActivityEntry>
  + clear() : void
  + toJson() : nlohmann::json
  + {static} fromJson(j: nlohmann::json) : ActivityLog
}

class ActivityEntry {
  - timestamp : std::chrono::system_clock::time_point
  - message : std::string
}

' =====================
' Relações
' =====================
Board --> ActivityLog : usa
Board *-- Column : composição
Column *-- Card : composição
Card --> User : assignee
ActivityLog *-- ActivityEntry : composição

note bottom of Board
  Board agrega Column por composição.
  Column agrega Card (composição).
  Justificativa: relação de posse forte.
end note

note right of Card
  Sistema de Tags implementado na Etapa 3:
  - Adicionar/remover tags
  - Filtrar cards por tags
  - Persistência JSON completa
  - Integração com CLI e GUI
end note

note left of Board
  Métodos de filtro e busca:
  - findCardsByTag: busca por etiqueta
  - filterByPriority: filtra por prioridade mínima
  - filterByAssignee: filtra por responsável
  - getAllTags: lista todas as tags do board
end note

@enduml